Improved options of newline-after-import
Signed-off-by: Jaid <6216144+Jaid@users.noreply.github.com>

--- a/src/rules/import.yml
+++ b/src/rules/import.yml
@@ -1,6 +1,8 @@
 prefix: i
 rules:
-  newline-after-import: WARN
+  newline-after-import:
+    - WARN
+    - considerComments: true
   first: WARN
   no-duplicates: ERROR
   no-mutable-exports: WARN
