--- a/package.json
+++ b/package.json
@@ -7,18 +7,20 @@
     "@typescript-eslint/parser": "^6.4.1",
     "browserslist-config-jaid-node": "3.0.0",
     "eslint": "^8.48.0",
+    "eslint-import-resolver-node": "^0.3.9",
+    "eslint-import-resolver-typescript": "^3.6.0",
+    "eslint-plugin-i": "^2.28.0-2",
+    "eslint-plugin-import-quotes": "^0.0.1",
     "eslint-plugin-n": "^16.0.2",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-regexp": "^1.15.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-unicorn": "^48.0.1",
-    "eslint-plugin-you-dont-need-lodash-underscore": "^6.13.0",
-    "eslint-plugin-import-quotes": "^0.0.1",
-    "eslint-plugin-i": "^2.28.0-2",
-    "eslint-import-resolver-typescript": "^3.6.0",
-    "eslint-plugin-regexp": "^1.15.0"
+    "eslint-plugin-you-dont-need-lodash-underscore": "^6.13.0"
   },
   "devDependencies": {
+    "@atao60/fse-cli": "^0.1.9",
     "babel-preset-jaid": "17.0.0",
     "chalk": "^5.3.0",
     "cross-env": "^7.0.3",
@@ -29,6 +31,7 @@
     "filter-obj": "^5.1.0",
     "foreach-cli": "^1.8.1",
     "fs-extra": "^11.1.1",
+    "handlebars": "^4.7.8",
     "jest": "^29.6.4",
     "jest-light-runner": "^0.5.1",
     "js-yaml": "^4.1.0",
@@ -37,15 +40,13 @@
     "open-cli": "^7.2.0",
     "pretty-bytes": "^6.1.1",
     "publishimo": "^5.0.6",
+    "read-file-yaml": "^2.0.0",
+    "showdown": "^2.1.0",
     "sort-keys": "^5.0.0",
     "tsconfig-jaid": "^4.7.0",
-    "read-file-yaml": "^2.0.0",
-    "yaml": "^2.3.1",
-    "showdown": "^2.1.0",
-    "handlebars": "^4.7.8",
     "tsx": "^3.12.7",
     "type-fest": "^4.3.0",
-    "@atao60/fse-cli": "^0.1.9"
+    "yaml": "^2.3.1"
   },
   "scripts": {
     "build": "tsx src/build.ts",
