--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "eslint-plugin-i": "^2.28.0-2",
     "eslint-plugin-import-quotes": "^0.0.1",
     "eslint-plugin-n": "^16.0.2",
+    "eslint-plugin-package-json": "^0.1.4",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-regexp": "^1.15.0",
