--- a/src/presets/index/config.yml
+++ b/src/presets/index/config.yml
@@ -7,6 +7,7 @@ plugins:
   - import-quotes
   - "@typescript-eslint"
   - regexp
+  - package-json
 parser: '@typescript-eslint/parser'
 parserOptions:
   ecmaVersion: latest
