--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
     "eslint-import-resolver-typescript": "^3.6.0",
     "eslint-plugin-i": "^2.28.0-2",
     "eslint-plugin-import-quotes": "^0.0.1",
+    "eslint-plugin-jsonc": "^2.9.0",
     "eslint-plugin-n": "^16.0.2",
-    "eslint-plugin-package-json": "^0.1.4",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-regexp": "^1.15.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-unicorn": "^48.0.1",
+    "eslint-plugin-yml": "^1.8.0",
     "eslint-plugin-you-dont-need-lodash-underscore": "^6.13.0"
   },
   "devDependencies": {
