--- a/src/presets/index/config.yml
+++ b/src/presets/index/config.yml
@@ -35,6 +35,10 @@ ignorePatterns:
   - node_modules/
 overrides:
   - files:
+    - '*.ts'
+    - '*.js'
+    parser: '@typescript-eslint/parser'
+  - files:
       - '*.json'
       - '*.json5'
       - '*.jsonc'
