--- a/src/rules/typescript.yml
+++ b/src/rules/typescript.yml
@@ -1,4 +1,5 @@
 # https://typescript-eslint.io/rules
+overridesSlot: 0
 prefix: '@typescript-eslint'
 rules:
   no-unnecessary-boolean-literal-compare: WARN # https://typescript-eslint.io/rules/no-unnecessary-boolean-literal-compare
