--- a/src/presets/index/config.yml
+++ b/src/presets/index/config.yml
@@ -1,14 +1,14 @@
 plugins:
-  - 'n'
-  - promise
-  - unicorn
-  - i
-  - simple-import-sort
-  - import-quotes
-  - "@typescript-eslint"
-  - regexp
-  - jsonc
-  - yml
+- n
+- promise
+- unicorn
+- i
+- simple-import-sort
+- import-quotes
+- '@typescript-eslint'
+- regexp
+- jsonc
+- yml
 parser: '@typescript-eslint/parser'
 parserOptions:
   ecmaVersion: latest
@@ -20,30 +20,30 @@ env:
 settings:
   import/parsers:
     '@typescript-eslint/parser':
-      - '*.ts'
+    - '*.ts'
   import/resolver:
     typescript:
       alwaysTryTypes: true
     node: true
 ignorePatterns:
-  - /dist/
-  - /out/
-  - /temp/
-  - /srcCompiled/
-  - /srcCompiled-*/
-  - '*.d.ts'
-  - node_modules/
+- /dist/
+- /out/
+- /temp/
+- /srcCompiled/
+- /srcCompiled-*/
+- '*.d.ts'
+- node_modules/
 overrides:
-  - files:
-    - '*.ts'
-    - '*.js'
-    parser: '@typescript-eslint/parser'
-  - files:
-      - '*.json'
-      - '*.json5'
-      - '*.jsonc'
-    parser: jsonc-eslint-parser
-  - files:
-      - '*.yml'
-      - '*.yaml'
-    parser: yaml-eslint-parser
+- files:
+  - '*.ts'
+  - '*.js'
+  parser: '@typescript-eslint/parser'
+- files:
+  - '*.json'
+  - '*.json5'
+  - '*.jsonc'
+  parser: jsonc-eslint-parser
+- files:
+  - '*.yml'
+  - '*.yaml'
+  parser: yaml-eslint-parser
