--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "eslint-plugin-import-quotes": "^0.0.1",
     "eslint-plugin-jsonc": "^2.9.0",
     "eslint-plugin-n": "^16.0.2",
+    "eslint-plugin-perfectionist": "^1.5.1",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-regexp": "^1.15.0",
