Added more perfectionist rules
Signed-off-by: Jaid <6216144+Jaid@users.noreply.github.com>

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,20 @@
 {
-  "extends": "jaid"
+  "extends": "jaid",
+  "overrides": [
+    {
+      "files": [
+        "src/rules/**/*.yml"
+      ],
+      "rules": {
+        "yml/sort-keys": ["warn", [
+          {
+            "pathPattern": "^rules$",
+            "order": {
+              "natural": true
+            }
+          }
+        ]]
+      }
+    }
+  ]
 }
