--- a/src/rules/perfectionist.yml
+++ b/src/rules/perfectionist.yml
@@ -3,7 +3,8 @@ prefix: perfectionist
 rules:
   sort-classes: # https://eslint-plugin-perfectionist.azat.io/rules/sort-classes
   - WARN
-  - ignore-case: true
+  - type: natural
+    ignore-case: true
     groups:
     - static-property
     - static-method
@@ -13,3 +14,39 @@ rules:
     - private-method
     - method
     - unknown
+  sort-enums: # https://eslint-plugin-perfectionist.azat.io/rules/sort-enums
+  - WARN
+  - type: natural
+    ignore-case: true
+  sort-interfaces: # https://eslint-plugin-perfectionist.azat.io/rules/sort-interfaces
+  - WARN
+  - type: natural
+    ignore-case: true
+  sort-objects: # https://eslint-plugin-perfectionist.azat.io/rules/sort-objects
+  - WARN
+  - type: natural
+    ignore-case: true
+    always-on-top:
+    - id
+    - uuid
+    - identifier
+    - index
+    - name
+    - title
+    - displayName
+  sort-union-types: # https://eslint-plugin-perfectionist.azat.io/rules/sort-union-types
+  - WARN
+  - type: natural
+    ignore-case: true
+  sort-object-types: # https://eslint-plugin-perfectionist.azat.io/rules/sort-object-types
+  - WARN
+  - type: natural
+    ignore-case: true
+  sort-named-imports: # https://eslint-plugin-perfectionist.azat.io/rules/sort-named-imports
+  - WARN
+  - type: natural
+    ignore-case: true
+  sort-named-exports: # https://eslint-plugin-perfectionist.azat.io/rules/sort-named-exports
+  - WARN
+  - type: natural
+    ignore-case: true
