Fixed ignore patterns
Signed-off-by: Jaid <6216144+Jaid@users.noreply.github.com>

--- a/src/presets/index/config.yml
+++ b/src/presets/index/config.yml
@@ -28,11 +28,11 @@ settings:
       alwaysTryTypes: true
     node: true
 ignorePatterns:
-- /dist/
-- /out/
-- /temp/
-- /srcCompiled/
-- /srcCompiled-*/
+- ../../dist/
+- ../../out/
+- ../../temp/
+- ../../srcCompiled/
+- ../../srcCompiled-*/
 - '*.d.ts'
 - node_modules/
 overrides:
