--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "foreach-cli": "^1.8.1",
     "fs-extra": "^11.1.1",
     "handlebars": "^4.7.8",
+    "immer": "^10.0.2",
     "jest": "^29.6.4",
     "jest-light-runner": "^0.5.1",
     "js-yaml": "^4.1.0",
