--- a/src/presets/index/config.yml
+++ b/src/presets/index/config.yml
@@ -28,9 +28,9 @@ settings:
       alwaysTryTypes: true
     node: true
 ignorePatterns:
-- /../../dist/
-- /../../out/
-- /../../temp/
+- /dist/
+- /out/
+- /temp/
 overrides:
 - files:
   - '*.ts'
