Added more rules
Signed-off-by: Jaid <6216144+Jaid@users.noreply.github.com>

--- a/src/rules/react-jsx.yml
+++ b/src/rules/react-jsx.yml
@@ -59,5 +59,8 @@ rules:
   require-render-return: WARN
   self-closing-comp: WARN
   sort-comp: WARN
+  sort-default-props:
+  - WARN
+  - ignoreCase: true
   style-prop-object: WARN
   void-dom-elements-no-children: WARN
