--- a/src/rules/typescript-style.yml
+++ b/src/rules/typescript-style.yml
@@ -10,8 +10,10 @@ rules:
   consistent-type-assertions: # https://typescript-eslint.io/rules/consistent-type-assertions
   - WARN
   - assertionStyle: angle-bracket
-    objectLiteralTypeAssertions: never
+    objectLiteralTypeAssertions: allow
   consistent-type-definitions: [WARN, type] # https://typescript-eslint.io/rules/consistent-type-definitions
+  consistent-type-exports: WARN # https://typescript-eslint.io/rules/consistent-type-exports
+  consistent-type-imports: WARN # https://typescript-eslint.io/rules/consistent-type-imports
   member-delimiter-style: # https://typescript-eslint.io/rules/member-delimiter-style
   - WARN
   - singleline:
