--- a/src/rules/import.yml
+++ b/src/rules/import.yml
@@ -5,7 +5,7 @@ rules:
   newline-after-import:
   - WARN
   - considerComments: true
-  no-duplicates: ERROR
+  no-duplicates: WARN
   no-mutable-exports: WARN
   no-self-import: ERROR
   no-useless-path-segments: WARN
