Improved padding-line-between-statements options
Signed-off-by: Jaid <6216144+Jaid@users.noreply.github.com>

--- a/src/rules/typescript-override-eslint.yml
+++ b/src/rules/typescript-override-eslint.yml
@@ -65,6 +65,9 @@ rules:
   - blankLine: never
     prev: type
     next: type
+  - blankLine: any
+    prev: export
+    next: '*'
   prefer-nullish-coalescing: WARN # https://typescript-eslint.io/rules/prefer-nullish-coalescing
   prefer-regexp-exec: WARN # https://typescript-eslint.io/rules/prefer-regexp-exec
   quotes: [WARN, backtick] # https://typescript-eslint.io/rules/quotes
