Improved array-bracket-newline
Signed-off-by: Jaid <6216144+Jaid@users.noreply.github.com>

--- a/src/rules/style.yml
+++ b/src/rules/style.yml
@@ -2,7 +2,7 @@ overridesSlot: 0
 rules:
   array-bracket-newline:
   - WARN
-  - multiline: true
+  - consistent
   array-bracket-spacing: WARN
   array-element-newline: [WARN, consistent]
   arrow-parens: [WARN, as-needed]
