--- a/package.json
+++ b/package.json
@@ -30,23 +30,23 @@
     "url": "https://github.com/jaid/eslint-config-jaid"
   },
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^6.6.0",
-    "@typescript-eslint/parser": "^6.6.0",
+    "@typescript-eslint/eslint-plugin": "^6.7.0",
+    "@typescript-eslint/parser": "^6.7.0",
     "browserslist-config-jaid-node": "3.0.0",
-    "eslint": "^8.48.0",
+    "eslint": "^8.49.0",
     "eslint-import-resolver-node": "^0.3.9",
     "eslint-import-resolver-typescript": "^3.6.0",
-    "eslint-plugin-i": "^2.28.0-2",
+    "eslint-plugin-i": "^2.28.1",
     "eslint-plugin-import-quotes": "^0.0.1",
     "eslint-plugin-jsonc": "^2.9.0",
-    "eslint-plugin-n": "^16.0.2",
-    "eslint-plugin-perfectionist": "^1.5.1",
+    "eslint-plugin-n": "^16.1.0",
+    "eslint-plugin-perfectionist": "^2.1.0",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-regexp": "^1.15.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-unicorn": "^48.0.1",
-    "eslint-plugin-yml": "^1.8.0",
+    "eslint-plugin-yml": "^1.9.0",
     "eslint-plugin-you-dont-need-lodash-underscore": "^6.13.0"
   },
   "devDependencies": {
@@ -56,14 +56,14 @@
     "cross-env": "^7.0.3",
     "debug": "^4.3.4",
     "emp": "^2.0.0",
-    "eslint-config-jaid": "^8.1.1",
+    "eslint-config-jaid": "^8.8.0",
     "eslint-find-rules": "^4.1.0",
     "filter-obj": "^5.1.0",
     "foreach-cli": "^1.8.1",
     "fs-extra": "^11.1.1",
     "handlebars": "^4.7.8",
     "immer": "^10.0.2",
-    "jest": "^29.6.4",
+    "jest": "^29.7.0",
     "jest-light-runner": "^0.5.1",
     "js-yaml": "^4.1.0",
     "list-dir-content-size": "^0.0.5",
@@ -74,8 +74,8 @@
     "read-file-yaml": "^2.0.0",
     "showdown": "^2.1.0",
     "sort-keys": "^5.0.0",
-    "tsconfig-jaid": "^5.0.1",
-    "tsx": "^3.12.8",
+    "tsconfig-jaid": "^5.2.0",
+    "tsx": "^3.12.9",
     "type-fest": "^4.3.1",
     "yaml": "^2.3.2"
   },
