--- a/src/rules/perfectionist.yml
+++ b/src/rules/perfectionist.yml
@@ -22,6 +22,29 @@ rules:
   - WARN
   - type: natural
     ignore-case: true
+  sort-imports: # https://eslint-plugin-perfectionist.azat.io/rules/sort-imports
+  - WARN
+  - type: natural
+    ignore-case: true
+    groups:
+    - side-effect # import 'foo'
+    - - parent-type # import type { Options } from '../foo.js'
+      - sibling-type # import type { Options } from './foo.js'
+      - external-type # import type { Options } from 'foo'
+      - internal-type # import type { Options } from 'lib/foo.js'
+      - index-type # import type { Options } from './index.d.ts'
+    - object # import log = console.log
+    - - builtin # import fs from 'fs'
+      - node # import fs from 'node:fs'
+    - external # import foo from 'foo'
+    - internal # import foo from 'lib/foo.js'
+    - - parent # import { foo } from '../foo.js'
+      - siblings # import { foo } from './foo.js'
+    - style # import style from './style.css'
+    - unknown
+    custom-groups:
+      value:
+        node: node:*
   sort-interfaces: # https://eslint-plugin-perfectionist.azat.io/rules/sort-interfaces
   - WARN
   - type: natural
