--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
     "read-file-yaml": "^2.0.0",
     "showdown": "^2.1.0",
     "sort-keys": "^5.0.0",
-    "tsconfig-jaid": "^6.0.1",
+    "tsconfig-jaid-node": "^6.0.1",
     "tsx": "^3.12.10",
     "type-fest": "^4.3.1",
     "yaml": "^2.3.2"
