Removed rule no-new-object to no-object-contructors
Signed-off-by: Jaid <6216144+Jaid@users.noreply.github.com>

--- a/src/rules/style.yml
+++ b/src/rules/style.yml
@@ -37,7 +37,7 @@ rules:
     maxEOF: 1
     maxBOF: 0
   no-nested-ternary: WARN
-  no-new-object: WARN
+  no-object-constructor: WARN
   no-tabs: WARN
   no-trailing-spaces: WARN
   no-underscore-dangle:
