Removed lodash rules for capizalize and size
Signed-off-by: Jaid <6216144+Jaid@users.noreply.github.com>

--- a/src/rules/lodash.yml
+++ b/src/rules/lodash.yml
@@ -1,10 +1,12 @@
 overridesSlot: 0
 prefix: you-dont-need-lodash-underscore
 rules:
+  capitalize: OFF
   get: OFF
   is-function: OFF
   is-nil: OFF
   is-string: OFF
   last: OFF
   omit: OFF
+  size: OFF
   uniq: OFF
