Allowing lodash.castArray
Signed-off-by: Jaid <6216144+Jaid@users.noreply.github.com>

--- a/src/rules/lodash.yml
+++ b/src/rules/lodash.yml
@@ -2,6 +2,7 @@ overridesSlot: 0
 prefix: you-dont-need-lodash-underscore
 rules:
   capitalize: OFF
+  castArray: OFF
   get: OFF
   is-function: OFF
   is-nil: OFF
