--- a/package.json
+++ b/package.json
@@ -82,7 +82,7 @@
     "build": "tsx src/build.ts",
     "release": "npm run build && find out/package -name package.json -execdir npm publish \\;",
     "buildPage": "fse emptyDir dist/page && tsx src/scripts/activeHtml.ts && tsx src/scripts/unusedHtml.ts && tsx src/scripts/deprecatedHtml.ts && fse copy etc/page dist/page",
-    "test": "node --loader tsx --test test/index.ts"
+    "test": "node --import tsx --test test/index.ts"
   },
   "license": "MIT"
 }
