Improved newline-after-import
Signed-off-by: Jaid <6216144+Jaid@users.noreply.github.com>

--- a/src/rules/import.yml
+++ b/src/rules/import.yml
@@ -5,6 +5,7 @@ rules:
   newline-after-import:
   - WARN
   - considerComments: true
+    exactCount: true
   no-duplicates: WARN
   no-mutable-exports: WARN
   no-self-import: ERROR
