--- a/src/rules/lodash.yml
+++ b/src/rules/lodash.yml
@@ -2,7 +2,7 @@ overridesSlot: 0
 prefix: you-dont-need-lodash-underscore
 rules:
   capitalize: OFF
-  castArray: OFF
+  cast-array: OFF
   get: OFF
   is-function: OFF
   is-nil: OFF
