--- a/src/rules/typescript-sort-keys.yml
+++ b/src/rules/typescript-sort-keys.yml
@@ -1,3 +1,6 @@
 # Blocking issue: https://github.com/infctr/eslint-plugin-typescript-sort-keys/pull/64
 overridesSlot: 0
 prefix: typescript-sort-keys
+rules:
+  interface: WARN
+  string-enum: WARN
